Correcting spacing

--- a/index.css
+++ b/index.css
@@ -3,13 +3,14 @@ h1 {
     text-transform: uppercase;
     font-weight: 900!important;
     color:hsl(0, 0%, 95%);
-    padding-top: 50px;
+    padding-top: 25px;
 }
 
 p {
     font-family: 'Lexend Deca', sans-serif;
     color: hsla(0, 0%, 100%, 0.75);
-    padding-bottom: 50px;
+    padding-top: 25px;
+    padding-bottom: 75px;
 }
 
 body{
@@ -21,7 +22,7 @@ button{
     background-color: hsl(0, 0%, 95%);
     border-radius: 25px!important;
     border: 1px solid white;
-    padding: 5px 25px;
+    padding: 10px 50px;
 }
 
 #sedans{
